--- a/serverless.yml
+++ b/serverless.yml
@@ -17,11 +17,29 @@ package:
   individually: true
 
 functions:
-  test:
-    handler: functions/test/index.handler
+  addBooking:
+    handler: functions/addBooking/index.handler
     events:
       - httpApi:
-          path: '/getWords'
+          path: '/add'
+          method: POST
+  changeBooking:
+    handler: functions/changeBooking/index.handler
+    events:
+      - httpApi:
+          path: '/change'
+          method: PATCH
+  deleteBooking:
+    handler: functions/deleteBooking/index.handler
+    events:
+      - httpApi:
+          path: '/delete'
+          method: DELETE
+  getBookings:
+    handler: functions/getBookings/index.handler
+    events:
+      - httpApi:
+          path: '/get'
           method: GET
 
 resources:
