--- a/package.json
+++ b/package.json
@@ -11,5 +11,10 @@
   "license": "ISC",
   "devDependencies": {
     "serverless-webpack": "^5.13.0"
+  },
+  "dependencies": {
+    "moment": "^2.29.4",
+    "nanoid": "^5.0.3",
+    "uuid": "^9.0.1"
   }
 }
